chore: recursively mark props as required for embedded structs
